--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "homepage": "https://github.com/Polvista/telegram-google-photos-bot#readme",
   "dependencies": {
+    "axios": "^0.18.0",
     "dotenv": "^7.0.0",
-    "node-telegram-bot-api": "^0.30.0"
+    "node-telegram-bot-api": "^0.30.0",
+    "request-promise": "^4.2.4"
   }
 }
